--- a/Aiden_Ghim_support.css
+++ b/Aiden_Ghim_support.css
@@ -82,6 +82,55 @@ header {
 a {
     text-decoration: none;
 }
-footer {
+h1 {
+    font-size: 60px;
     text-align: center;
+
+    margin-bottom: 1%;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    text-align: center;
+    width: 100%;
+}
+
+#introp {
+
+    margin-top: 0%;
+
+    font-size: 30px;
+    text-align: center;
+}
+
+form {
+    text-align: center;
+    border: #5b53fa solid 2px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin: 2%;
+    padding: 2%;
+}
+
+button {
+    width: 70px;
+    height: 35px;
+    text-align: center;
+    font-family: "Share Tech", sans-serif;
+    font-size: 20px;
+    background-color: #5b53fa;
+    color: white;
+    border: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+input {
+    margin: 1%;
 }
