--- a/Aiden_Ghim_best.css
+++ b/Aiden_Ghim_best.css
@@ -72,7 +72,9 @@ header {
     color: #5b53fa;
     text-decoration: none;
 }
-
+.headerlink:active {
+    font-size: 22px;
+}
 h1 {
     font-size: 60px;
     text-align: center;
