--- a/Aiden_Ghim_style.css
+++ b/Aiden_Ghim_style.css
@@ -45,9 +45,6 @@ header {
     text-decoration: underline;
 }
 
-.headericon:active {
-    font-weight: 1000;
-}
 
 #logo {
     flex-grow: 1;
@@ -78,6 +75,9 @@ header {
     font-size: 20px;
 }
 
+.headerlink:active {
+    font-size: 22px;
+}
 
 a {
     text-decoration: none;
